--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dfb-luis-apps",
+  "name": "dfb-luis-apps-lib",
   "version": "1.0.0",
   "description": "",
   "main": "build/index.js",
