--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "build/index.js",
-  "types": "build/**/*.d.ts",
+  "types": "build/index.d.ts",
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "jest --detectOpenHandles --coverage",
     "clean": "rimraf build/*",
     "prepare": "npm run build",
     "prepublishOnly": "npm test",
@@ -31,18 +31,18 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.16",
+    "@types/jest": "^24.0.23",
     "@types/node": "^12.6.9",
     "@types/request": "^2.48.2",
     "@types/request-promise": "^4.1.44",
     "@types/uuid": "^3.4.5",
     "dotenv": "^8.2.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "rimraf": "^2.6.3",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^24.1.0",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.7.2"
   }
 }
