--- a/json/apps.json
+++ b/json/apps.json
@@ -1,6 +1,6 @@
 [{
     "id": "e81bd25c-41c7-4ff1-8f8a-de2ad3f29f3c",
-    "name": "Hazem's Pizza App 2",
+    "name": "Mock Hazem's Pizza App 2",
     "description": "",
     "culture": "en-us",
     "usageScenario": "",
@@ -14,7 +14,7 @@
     "tokenizerVersion": "1.0.0"
   }, {
     "id": "c46a7a94-3661-47bb-9bfb-ef1c5f98c4a6",
-    "name": "Dina's Pizza app",
+    "name": "Mock  Dina's Pizza app",
     "description": "",
     "culture": "en-us",
     "usageScenario": "",
@@ -28,7 +28,7 @@
     "tokenizerVersion": "1.0.0"
   }, {
     "id": "286dd213-96f5-4b8c-90c5-6942418db412",
-    "name": "Descriptors - Cities",
+    "name": "Mock  Descriptors - Cities",
     "description": "",
     "culture": "en-us",
     "usageScenario": "",
@@ -42,7 +42,7 @@
     "tokenizerVersion": "1.0.0"
   }, {
     "id": "9dffb4e0-0120-4ce1-b686-ed5512c2b9ad",
-    "name": "Hazem's Pizza App",
+    "name": "Mock  Hazem's Pizza App",
     "description": "",
     "culture": "en-us",
     "usageScenario": "",
@@ -68,7 +68,7 @@
     "tokenizerVersion": "1.0.0"
   }, {
     "id": "781637c9-f803-49eb-bbed-a6ecc73a0d4a",
-    "name": "pattern",
+    "name": "Mock  pattern",
     "description": "",
     "culture": "en-us",
     "usageScenario": "",
@@ -82,7 +82,7 @@
     "tokenizerVersion": "1.0.0"
   }, {
     "id": "b4dd33cd-7048-4f3a-9c23-b89ed344dcc3",
-    "name": "prebuilt models",
+    "name": "Mock  prebuilt models",
     "description": "",
     "culture": "en-us",
     "usageScenario": "",
@@ -96,7 +96,7 @@
     "tokenizerVersion": "1.0.0"
   }, {
     "id": "8c5057b4-ce65-4b17-a156-2e8d78c5d2d3",
-    "name": "test 4",
+    "name": "Mock test 4",
     "description": "",
     "culture": "en-us",
     "usageScenario": "",
@@ -110,7 +110,7 @@
     "tokenizerVersion": "1.0.0"
   }, {
     "id": "e5269c02-2d7a-4fd9-b16d-d0f11d9dc042",
-    "name": "Test app",
+    "name": "Mock Test app",
     "description": "",
     "culture": "zh-cn",
     "usageScenario": "",
@@ -124,7 +124,7 @@
     "tokenizerVersion": "1.0.0"
   }, {
     "id": "7d3c1969-1c22-4905-9dbc-fd90ca09d7ce",
-    "name": "Pizza Tutorial",
+    "name": "Mock Pizza Tutorial",
     "description": "",
     "culture": "en-us",
     "usageScenario": "",
