--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dfb-luis-apps-lib",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -14,8 +14,8 @@
     "version": "npm run format && git add -A src",
     "prebuild": "npm run clean",
     "build": "tsc -p tsconfig.build.json",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\" ",
-    "lint": "tslint -p tsconfig.base.json -c tslint.json --exclude \"node_modules/**\" \"**/*.ts\" "
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\" \"__mocks__/**/*.ts\" \"__mocks__/**/*.js\" \"tests/**/*.ts\" ",
+    "lint": "tslint -p tsconfig.base.json -c tslint.json --exclude \"node_modules/**\" \"**/*.ts\" ",
   },
   "author": "",
   "license": "ISC",
@@ -23,7 +23,6 @@
     "async": "^2.5.0",
     "async-await-retry": "^1.0.3",
     "fs-extra": "^4.0.2",
-    "got": "^9.6.0",
     "moment": "^2.19.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
@@ -36,7 +35,6 @@
     "@types/request": "^2.48.2",
     "@types/request-promise": "^4.1.44",
     "@types/uuid": "^3.4.5",
-    "dotenv": "^8.2.0",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "rimraf": "^2.6.3",
@@ -44,5 +42,8 @@
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.7.2"
+  },
+  "changeLog": {
+    "1.0.1": "Added mock for request, added param test, coverage=100% all tests pass, fixed failing npm audit"
   }
 }
