--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "dfb-luis-apps-lib",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
-    "test": "jest --detectOpenHandles --coverage",
+    "test": "jest --detectOpenHandles --coverage --watchAll",
     "clean": "rimraf build/*",
     "prepare": "npm run build",
     "prepublishOnly": "npm test",
