--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -68,7 +68,9 @@
     // Enables experimental support for ES7 decorators.
     "experimentalDecorators": true,
     // Enables experimental support for emitting type metadata for decorators.
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+
+    "resolveJsonModule": true
   },
   // Files and directories to be included in compilation
   "include": [
