--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
   "dependencies": {
     "async": "^2.5.0",
     "async-await-retry": "^1.0.3",
+    "dotenv": "^8.2.0",
     "fs-extra": "^4.0.2",
     "moment": "^2.19.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
     "requestretry": "^1.12.2",
+    "superagent": "^5.1.3",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/superagent": "^4.1.4",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.14",
     "@types/request": "^2.48.2",
@@ -38,7 +42,7 @@
     "@types/uuid": "^3.4.5",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
-    "rimraf": "^2.6.3",
+    "rimraf": "^2.7.1",
     "ts-jest": "^24.2.0",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
